--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-scripts": "2.0.5",
+    "bootstrap": "^4.3.1",
+    "react-scroll": "^1.7.10",
+    "react-simple-dropdown": "^3.2.3",
+    "react-bootstrap": "^1.0.0-beta.14"
   },
   "scripts": {
     "start": "react-scripts start",
