--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.6.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
-    "bootstrap": "^4.3.1",
     "react-scroll": "^1.7.10",
     "react-simple-dropdown": "^3.2.3",
-    "react-bootstrap": "^1.0.0-beta.14"
+    "surge": "^0.21.3"
   },
   "scripts": {
     "start": "react-scripts start",
